# Stock_terminal

./: .env.example  .gitignore  README.md  pyproject.toml
src/stock_terminal/: __init__.py  __main__.py  config.py
src/stock_terminal/api/: __init__.py  client.py  exceptions.py  models.py
src/stock_terminal/storage/: __init__.py  watchlist.py
src/stock_terminal/tui/: __init__.py  app.py  app.tcss
src/stock_terminal/tui/screens/: __init__.py  add_symbol.py  set_alert.py
src/stock_terminal/tui/widgets/: __init__.py  chart_panel.py  watchlist_table.py
tests/: test_app_smoke.py  test_client.py  test_watchlist.py  test_watchlist_table.py
